--- a/Pages/ImageColoring.razor
+++ b/Pages/ImageColoring.razor
@@ -6,7 +6,7 @@
 
 <PageTitle>Image Coloring</PageTitle>
 
-<h1>Image Coloring</h1>
+<h1>Aktivita 1 - Obarvení obrázku</h1>
 
 <DisplayRaster Raster="rasterValuesOnly" ShowMismatchIndicators="true" />
 
