--- a/Pages/FromCompressed.razor
+++ b/Pages/FromCompressed.razor
@@ -6,59 +6,125 @@
 
 <h1>Aktivita 3 – Komprimovaný černobílý a barevný kód</h1>
 
-<DisplayRasterCompressed Raster="rasterSmiley" ShowMismatchIndicators="true" />
-<DisplayRasterCompressed Raster="rasterSmileyColor" ShowMismatchIndicators="true" />
-<DisplayRasterCompressed Raster="rasterCat" ShowMismatchIndicators="true" />
-<DisplayRasterCompressed Raster="rasterFace" ShowMismatchIndicators="true" />
-
+@foreach (var raster in rasters)
+{
+    <DisplayRasterCompressed Raster="raster" ShowMismatchIndicators="true" />
+}
 
 @code {
-    ArrayRaster rasterSmiley = new ArrayRaster(new int[,] {
-        {0, 1, 0, 1, 0},
-        {0, 1, 0, 1, 0},
-        {0, 0, 0, 0, 0},
-        {1, 1, 1, 1, 1},
-        {0, 1, 1, 1, 0}
-     }, 0, false, false, true);
 
-    ArrayRaster rasterSmileyColor = new ArrayRaster(new int[,] {
-        {0, 1, 0, 1, 0},
-        {0, 2, 0, 2, 0},
-        {0, 0, 0, 0, 0},
-        {1, 4, 4, 4, 1},
-        {0, 1, 1, 1, 0}
-     }, 0, false, false, true);
+    List<ArrayRaster> rasters = new List<ArrayRaster>
+    {
+        //raster heart
+        new ArrayRaster(new int[,] {
+            {0, 9, 0, 9, 0},
+            {9, 8, 9, 8, 9},
+            {9, 8, 7, 8, 9},
+            {0, 9, 8, 9, 0},
+            {0, 0, 9, 0, 0}
+        }, 0, false, false, true),
 
-    ArrayRaster rasterFace = new ArrayRaster(new int[,] {
-        {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0},
-        {0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0},
-        {0, 1, 4, 4, 4, 4, 4, 4, 1, 0, 0},
-        {0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0},
-        {0, 1, 0, 2, 0, 0, 0, 2, 0, 1, 0},
-        {0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0},
-        {0, 1, 0, 0, 3, 3, 3, 0, 0, 1, 0},
-        {0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0},
-        {0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0},
-        {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0}
-    }, 0, false, false, true);
+        //raster smiley duotone
+        new ArrayRaster(new int[,] {
+            {0, 1, 0, 1, 0},
+            {0, 1, 0, 1, 0},
+            {0, 0, 0, 0, 0},
+            {1, 1, 1, 1, 1},
+            {0, 1, 1, 1, 0}
+        }, 0, false, false, true),
 
+        //raster smiley color
+        new ArrayRaster(new int[,] {
+            {0, 1, 0, 1, 0},
+            {0, 2, 0, 2, 0},
+            {0, 0, 0, 0, 0},
+            {1, 4, 4, 4, 1},
+            {0, 1, 1, 1, 0}
+        }, 0, false, false, true),
 
-    ArrayRaster rasterCat = new ArrayRaster(new int[,] {
-        {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0},
-        {0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0},
-        {0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0},
-        {0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0},
-        {0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0},
-        {0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0},
-        {0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0},
-        {0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0},
-        {0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0},
-        {0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0},
-        {0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0},
-        {0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0},
-        {0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0},
-        {0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0},
-        {0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0},
-        {0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0}
-    }, 0, false, false, true);
+        //raster face
+        new ArrayRaster(new int[,] {
+            {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0},
+            {0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0},
+            {0, 1, 4, 4, 4, 4, 4, 4, 1, 0, 0},
+            {0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0},
+            {0, 1, 0, 2, 0, 0, 0, 2, 0, 1, 0},
+            {0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0},
+            {0, 1, 0, 0, 3, 3, 3, 0, 0, 1, 0},
+            {0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0},
+            {0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0},
+            {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0}
+        }, 0, false, false, true),
+
+        //raster cat
+        new ArrayRaster(new int[,] {
+            {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0},
+            {0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0},
+            {0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0},
+            {0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0},
+            {0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0},
+            {0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0},
+            {0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0},
+            {0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0},
+            {0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0},
+            {0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0},
+            {0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0},
+            {0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0},
+            {0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0},
+            {0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0},
+            {0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0},
+            {0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0}
+        }, 0, false, false, true),
+
+        //raster KVD
+        new ArrayRaster(new int[,] {
+            {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0},
+            {0, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0},
+            {0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0},
+            {0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0},
+            {0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0},
+            {0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0},
+            {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0}
+        }, 0, false, false, true),
+
+        //raster PGM2
+         new ArrayRaster(new int[,] {
+            {0, 0, 0, 0, 0, 0, 0},
+            {0, 1, 1, 1, 1, 0, 0},
+            {0, 1, 0, 0, 0, 1, 0},
+            {0, 1, 1, 1, 1, 0, 0},
+            {0, 1, 0, 0, 0, 0, 0},
+            {0, 1, 0, 0, 0, 0, 0},
+            {0, 0, 0, 0, 0, 0, 0},
+            {0, 0, 0, 0, 0, 0, 0},
+            {0, 2, 2, 2, 2, 0, 0},
+            {0, 2, 0, 0, 0, 0, 0},
+            {0, 2, 0, 2, 2, 2, 0},
+            {0, 2, 0, 0, 0, 2, 0},
+            {0, 2, 2, 2, 2, 2, 0},
+            {0, 0, 0, 0, 0, 0, 0},
+            {0, 0, 0, 0, 0, 0, 0},
+            {0, 3, 0, 0, 0, 3, 0},
+            {0, 3, 3, 0, 3, 3, 0},
+            {0, 3, 0, 3, 0, 3, 0},
+            {0, 3, 0, 0, 0, 3, 0},
+            {0, 3, 0, 0, 0, 3, 0},
+            {0, 0, 0, 0, 0, 0, 0},
+            {0, 0, 0, 0, 0, 0, 0},
+            {0, 4, 4, 4, 4, 0, 0},
+            {0, 0, 0, 0, 0, 4, 0},
+            {0, 4, 4, 4, 4, 0, 0},
+            {0, 4, 0, 0, 0, 0, 0},
+            {0, 4, 4, 4, 4, 4, 0},
+            {0, 0, 0, 0, 0, 0, 0}
+        }, 0, false, false, true),
+
+        //raster multicolor test
+        new ArrayRaster(new int[,] {
+            {0, 16, 16*2, 16*3},
+            {16*4, 16*5, 16*6, 16*7},
+            {16*8, 16*9, 16*10, 16*11},
+            {16*12, 16*13, 16*14, 16*15}
+        }, 0, false, false, true),
+    };
 }
