Add custom delimiters

--- a/Pages/FromCompressed.razor
+++ b/Pages/FromCompressed.razor
@@ -22,7 +22,7 @@
             {9, 8, 7, 8, 9},
             {0, 9, 8, 9, 0},
             {0, 0, 9, 0, 0}
-        }, 0, false, false, true),
+        }, false, false, true),
 
         //raster smiley duotone
         new ArrayRaster(new int[,] {
@@ -31,7 +31,7 @@
             {0, 0, 0, 0, 0},
             {1, 1, 1, 1, 1},
             {0, 1, 1, 1, 0}
-        }, 0, false, false, true),
+        }, 1, false, false, true),
 
         //raster smiley color
         new ArrayRaster(new int[,] {
@@ -40,7 +40,7 @@
             {0, 0, 0, 0, 0},
             {1, 4, 4, 4, 1},
             {0, 1, 1, 1, 0}
-        }, 0, false, false, true),
+        }, "*", false, false, true),
 
         //raster face
         new ArrayRaster(new int[,] {
@@ -54,7 +54,7 @@
             {0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0},
             {0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0},
             {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0}
-        }, 0, false, false, true),
+        }, "-", false, false, true),
 
         //raster cat
         new ArrayRaster(new int[,] {
@@ -74,7 +74,7 @@
             {0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0},
             {0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0},
             {0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0}
-        }, 0, false, false, true),
+        }, "|", 0, false, false, true),
 
         //raster KVD
         new ArrayRaster(new int[,] {
@@ -117,7 +117,7 @@
             {0, 4, 0, 0, 0, 0, 0},
             {0, 4, 4, 4, 4, 4, 0},
             {0, 0, 0, 0, 0, 0, 0}
-        }, 0, false, false, true),
+        }, "-", false, false, true),
 
         //raster multicolor test
         new ArrayRaster(new int[,] {
@@ -125,6 +125,6 @@
             {16*4, 16*5, 16*6, 16*7},
             {16*8, 16*9, 16*10, 16*11},
             {16*12, 16*13, 16*14, 16*15}
-        }, 0, false, false, true),
+        }, "-", false, false, true),
     };
 }
